--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ aws_cdk.aws_apigatewayv2
 aws_cdk.aws_codebuild
 aws_cdk.aws_s3
 aws_cdk.aws_cloudfront
+aws_cdk.aws_codepipeline
+aws_cdk.aws_codepipeline_actions
